Fix layout on mobile phones

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,12 @@
     body .head .claim {
         width: 60vw;
     }
+
+    body .section.info div.title {
+        padding-top: 120px;
+        padding-left: 0;
+        min-width: none;
+    }
 }
 
 /* noscript {
@@ -150,6 +156,7 @@ a.link:hover {
 .section.info content {
     padding-top: 50vh;
     display: flex;
+    width: 100%;
     flex-direction: row;
     gap: 40px;
     max-width: 1200px;
